<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Althele Tracker</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="show_location">Show Location</string>
    <string name="show_distance">Show Distance</string>
    <string name="txtDistance">Distance</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_gui">MainGUIActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_location">Athlete Tracker</string>
    <string name="title_activity_splash_screen">Athlete Tracker</string>
    <string name="title_activity_setting">Setting</string>
    <string name="saveSetting">Save</string>
    <string name="startTrack">Start Tracking</string>
    <string name="Thresh">Threashold</string>
    <string name="title_activity_help">Help</string>
    <string name="toogle_start">Start</string>
    <string name="toogle_pause">Pause</string>
    <string name="showMap">Show Map</string>
    <string name="setting">setting</string>
    <string name="ic_setting">ic_setting</string>
    <string name="ic_camera">ic_camera</string>
    <string name="location_stop_button_text">Stop</string>
    <string name="location_distance_text">00.00 m</string>
    <string name="location_sprints_text">0.00</string>
    <string name="location_distance_title">Distance</string>
    <string name="location_sprints_title">Sprints</string>
    <string name="location_time_title">TIME</string>
    <string name="location_time_text">00:00:00</string>
    <string name="setting_minDistance_title">Min Update Distance</string>
    <string name="setting_minTime_title">MIn Update Time</string>
    <string name="setting_save_btn_title">Save</string>
    <string name="setting_save_btn_text">Save</string>
    <string name="setting_btn_stop_text">Map</string>
    <string name="location_toggle_btn_on">Pause</string>
    <string name="location_toggle_btn_off">Start</string>
    <string name="location_toggle_btn_label">Start</string>
    <string name="btn_save_thresh_label">Save</string>
    <string name="btn_cancelThresh_label">Cancel</string>
    <string name="txt_edit_thresh"><b>Adjust Threshold</b></string>
    <string name="setting_item">setting item</string>
    <string name="txtSettingMenuTitle">Settings</string>
    <string name="hello">Hello World, SimpleHelpActivity!</string>
    <string name="topic_activity_label">Help Topic</string>
    <string name="topic1_name">Hello World, SimpleHelpActivity!</string>
    <string name="topic1_text">Simple Help</string>
    <string name="title_activity_help_topic">Help</string>
    <string name="hello_world">Hello world!</string>
    <string name="itemDistance">200 m</string>
    <string name="app_id">546502555422719</string>
    <string name="title_activity_facebook_login">FacebookLogin</string>
    <string name="title_activity_facebook_connect">FacebookConnect</string>
    <string name="share_facebook">Share</string>
    <string name="facebook_share">Share</string>
    <string name="txtSpeed">Speed</string>
    <string name="title_activity_switch_map_view">SwitchMapViewActivity</string>

</resources>